# AI_Mobile_Test_Studio

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
app/widgets/: bottompanel.cpp  bottompanel.h  chatpanel.cpp  chatpanel.h  devicepanel.cpp  devicepanel.h  navigationbar.cpp  navigationbar.h  titlebar.cpp  titlebar.h
core/adb/: adbcontroller.cpp  adbcontroller.h
core/appium/: appiumcontroller.cpp  appiumcontroller.h
core/config/: configmanager.cpp  configmanager.h
core/llm/: llm_provider.cpp  llm_provider.h
core/logger/: logger.cpp  logger.h
core/scrcpy/: scrcpycontroller.cpp  scrcpycontroller.h
docs/: API_SPEC.md  ARCHITECTURE.md  CODING_STYLE.md  DEVELOPMENT_GUIDE.md  PLUGIN_SPEC.md  PROJECT_DESIGN.md  ROADMAP.md
modules/chat/: __init__.py
modules/explorer/: __init__.py
modules/ocr/: __init__.py
modules/report/: __init__.py
modules/terminal/: __init__.py
modules/vision/: __init__.py
scripts/agent/: agent_loop.py
scripts/appium/: example_test.py
services/: ai_service.cpp  ai_service.h  chat_service.cpp  chat_service.h  device_service.cpp  device_service.h  plugin_service.cpp  plugin_service.h  script_service.cpp  script_service.h
